# computacion-tolerante-fallas-actividades

actividad-10/: README.md  manifest.yaml
actividad-10/src/: server.js
actividad-11/: Dockerfile  README.md  manifest.yaml  package.json  pmanifest.yaml
actividad-11/src/: server.js
actividad-12/: manifest.yaml  monitor.sh  probe.json
actividad-2/: index.js
actividad-3/: index.py
actividad-4/: Cargo.toml  README.md
actividad-4/src/: concurrency.rs  daemon.rs  main.rs  subprocess.rs  threads.rs
actividad-5/: Cargo.toml  README.md
actividad-5/src/: dummy.rs  main.rs
actividad-6/: README.md  init.py
actividad-9/: README.md  docker-compose.yml  nginx.conf  package.json
actividad-9/src/: server.js
