[package]
name = "actividad-5"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proc-manager"
path = "src/main.rs"

[[bin]]
name = "dummy-process"
path = "src/dummy.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proctitle = "0.1.1"
sysinfo = "0.30.5"
